elastic-logstash-kibana/templates/service-logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: elk
    service: logstash
spec:
  ports:
    -
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    pod: logstash
  type: ClusterIP
