elastic-logstash-kibana/templates/route-logstash.yaml
apiVersion: v1
kind: Route
metadata:
  name: logstash
  labels:
    app: elk
    name: logstash
  annotations:
    description: 'Route for Logstash ingestion'
spec:
  to:
    kind: Service
    name: logstash
